--- a/Backend-main/vercel.json
+++ b/Backend-main/vercel.json
@@ -3,14 +3,13 @@
   "builds": [
     {
       "src": "server.js",
-      "use": "@now/node"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
       "dest": "server.js"
-
     }
   ]
 }
