--- a/Backend-main/package.json
+++ b/Backend-main/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^3.12.0",
     "node-cron": "^3.0.3",
     "serialport": "^13.0.0",
+    "sqlite3": "^5.1.7",
     "ws": "^8.18.0"
   }
 }
